--- a/1.md
+++ b/1.md
@@ -1,3 +1,6 @@
+```SAMPLE SCREENSHOT OF THE RESULTS```
+![image](https://github.com/user-attachments/assets/a1eb04cf-5da3-4b4b-8306-8ff1e7b2d440)
+
 ```php
 <!DOCTYPE html>
 <html>
