--- a/2.md
+++ b/2.md
@@ -1,3 +1,6 @@
+```SAMPLE SCREENSHOT OF THE RESULT```
+![image](https://github.com/user-attachments/assets/bf5a8c9e-9fa8-4d7e-bfd9-1eab5bf805eb)
+
 ```php
 <?php
 session_start();
