--- a/3.md
+++ b/3.md
@@ -1,3 +1,7 @@
+```SAMPLE SCREENSHOT OF THE RESULT```
+![image](https://github.com/user-attachments/assets/eac47486-b572-4227-8b4b-0bbb9c804ae1)
+![image](https://github.com/user-attachments/assets/65f12b38-d370-4484-b4e1-433c2b9e539d)
+
 ```index.php```
 
 ```php
